--- a/CSS/siteSenai/style.css
+++ b/CSS/siteSenai/style.css
@@ -29,7 +29,7 @@ a {
     position: sticky;
     background-color: rgba(75, 73, 74, 0.9);
     width: 1256px;
-    height: 100px;
+    height: 85px;
     z-index: 10;
     top: 0;
 }
@@ -38,7 +38,7 @@ a {
     height: 50px;
     width: 150px;
     margin-left: 100px;
-    top: 20px;
+    top: 15px;
     z-index: 20;
     position: fixed;
 }
@@ -48,7 +48,7 @@ a {
     margin-top: -70px;
     margin-left: 840px;
     font-size: 20px;
-    z-index: 20
+    z-index: 20;
 }
 .cursos{
     position: fixed;
@@ -56,7 +56,7 @@ a {
     margin-top: -70px;
     margin-left: 940px;
     font-size: 20px;
-    z-index: 20
+    z-index: 20;
 }
 .contatos{
     position: fixed;
@@ -64,7 +64,7 @@ a {
     margin-top: -70px;
     margin-left: 1040px;
     font-size: 20px;
-    z-index: 20
+    z-index: 20;
 }
 .cadastre-se{
     position: fixed;
@@ -75,10 +75,11 @@ a {
     border-bottom: 0px solid;
     border-radius:10px;
     font-size: 20px;
-    z-index: 20
+    z-index: 20;
 }
 .fundo{
     margin-top: -100px;
+    z-index: 0;
 }
 .img{
     width: 1256px;
@@ -174,5 +175,5 @@ a:hover{
     color: white;
 }
 .programa:hover{
-    animation: cor 3s infinite;
+    animation: cor 3s;
 }
